# optexp

./: .gitignore  .readthedocs.yaml  README.md  README.rst  narval_sync.py  pyproject.toml  setup.cfg
.github/workflows/: black.yml  mypy.yml  pylint.yml
cc/: install.sh  load_modules.sh  readme.md
dev/: example.py  graphsage_citeseer_grid.py  graphsage_cora_grid.py  graphsage_photo_grid.py  install.sh  pool_with_ctrlc.py  test_default_arg.py  test_getting_voc.py  test_total_vocabulary.py  total_vocabulary.txt
dev_scripts/: exception_stacktrace_propagation.py  floating_points.py  loading_mnist.py  simpler_exception_management.py  test_except_management.py  wandb_fabric_execption_interaction.py
docs/source/: conf.py  index.rst  overview.rst  quickinstall.rst
docs/source/howtos/: adding_dataset.rst  adding_metric.rst  adding_model.rst  adding_optimizer.rst  extending_existing_component.rst  index.rst
docs/source/reference/: datasets.rst  experiment.rst  hardwareconfig.rst  index.rst  metrics.rst  models.rst  optimizers.rst
docs/source/topics/: index.rst  install.rst  python_experiments.rst  workspace.rst
docs/source/tutorials/: first_gridsearch.rst  index.rst  next_steps.rst  results.rst  slurm.rst
envs/: .gitignore  env-cc.sh.example  env.bat.example  env.sh.example  readme.md
examples/: plot_small_gridsearch.py  small_gridsearch.py  test.py  transformer_test.py  transformer_test_memory.py
experiments/: test.py  test_multigroup.py
optexp/: __init__.py  __main__.py  cli.py  component.py  config.py  datastructures.py  experiment.py  problem.py  utils.py
optexp/data/: data_logger.py  wandb.py
optexp/datasets/: __init__.py  dataset.py  dummy.py  imagenet.py  mnist.py  tokenizers.py  utils.py  wikitext103.py
optexp/datasets/image/: cifar10.py  imagenet.py  mnist.py
optexp/datasets/text/: language_task.py  tokenizers.py  wikitext.py  wikitext103.py
optexp/hardwareconfig/: __init__.py  hardwareconfig.py  manual.py  strict_manual.py  utils.py
optexp/hardwareconfigs/: hardwareconfig.py  strict_manual.py
optexp/metrics/: __init__.py  metric.py  metrics.py
optexp/models/: __init__.py  initiliazation.py  linear.py  model.py  transformer.py  vision.py
optexp/optim/: __init__.py  adagrad.py  adam.py  optimizer.py  sgd.py  weight_decay_strategies.py
optexp/optimizers/: adagrad.py  adam.py  optimizer.py  weight_decay_strategies.py
optexp/pipes/: __init__.py  pipe.py
optexp/plotting/: colors.py  plot_best.py  plot_hyperparameter_grid.py  style.py  utils.py
optexp/results/: data_logger.py  local_data_logger.py  main_data_logger.py  utils.py  wandb.py  wandb_api.py  wandb_data_logger.py
optexp/runner/: debugging.py  exp_state.py  fabric_helpers.py  init_callback.py  runner.py  sum_and_counter.py  utils.py
optexp/runner/slurm/: sbatch_writers.py  slurm_config.py
requirements/: dev.txt  docs.txt  install_all_121.sh  install_all_cpu.sh  main.txt  pytorch_121.txt  pytorch_cpu.txt  readme.md
src/optexp/: __init__.py  cli.py  experiment.py  utils.py
src/optexp/components/: component.py  dataset.py  experiment.py  hardwareconfig.py  metric.py  problem.py
src/optexp/components/datasets/: __init__.py  dataset.py  imagenet.py  mnist.py
src/optexp/components/hardwareconfigs/: hardwareconfig.py  rawconfig.py  strict_auto.py  strict_manual.py  utils.py
src/optexp/components/metrics/: metrics.py
src/optexp/components/models/: __init__.py  model.py  vision.py
src/optexp/components/optimizers/: adagrad.py  adam.py  optimizer.py  sgd.py  weight_decay_strategies.py  weight_decay_strategy.py
src/optexp/config/: __init__.py
src/optexp/data/: rate_limited_logger.py  utils.py  wandb.py
src/optexp/datasets/: __init__.py  barcoded_mnist.py  coloured_mnist.py  dataset.py  dataset_downloader.py  dataset_getter.py  frozen_dataset.py  heavytailedimagenet.py  image_dataset.py  imagenet.py  mnist.py  ptb.py  smallimagenet.py  text_dataset.py
src/optexp/datasets/image/: __init__.py  imagenet.py  mnist.py
src/optexp/datasets/loaders/: __init__.py  (+4 more)
src/optexp/experiments/: component.py  expconfig.py  experiment.py  fabric_helpers.py  hardwareconfig.py  lightning_experiment.py
src/optexp/hardwareconfigs/: strict_auto.py  utils.py
src/optexp/loggers/: __init__.py  asdict_with_classes.py  data_logger.py  rate_limited_logger.py  utils.py
src/optexp/metrics/: metric.py  metrics.py
src/optexp/models/: __init__.py  cnn.py  model.py  vision.py
src/optexp/optimizers/: __init__.py  hyperparameter.py  learning_rate.py  optimizer.py  sgd.py  weight_decay_strategy.py
src/optexp/plotter/: best_run_plotter.py  grid_plotter.py  names_and_consts.py  plot_per_class.py  plot_utils.py  style_figure.py
src/optexp/problems/: __init__.py  classification.py  exceptions.py  metrics.py  problem.py  utils.py
src/optexp/results/: data_utils.py  wandb.py
src/optexp/runner/: __init__.py  cli.py  data_utils.py  fabric_exception_helpers.py  fabric_helpers.py  runner.py  wandb_integration.py
src/optexp/slurm/: __init__.py  sbatch_writers.py
tests/: experiment_representation.py  perclass.py  test_initialization.py  test_iteration_counter.py  test_microbatching.py  test_multi_device.py  test_precision.py  test_run_without_crash.py  test_sequencer.py  test_wikitext.py
tests/tokenizers/: tokenizer_behaviour.py
(+26 files in other folders)
