[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"


[tool.mypy]

[[tool.mypy.overrides]]
module = [
    "torchvision.*",
    "lightning.*",
    "sklearn.*",
    "matplotlib.*",
    "pandas.*",
    "wandb.*",
    "pyarrow.*",
    "tokenizers.*",

]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "lightning.*"
ignore_errors = true

[tool.pylint.main]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "logging-fstring-interpolation",
    # "logging-not-lazy",
]
max-locals=20
max-args=8

[tool.pytest.ini_options]
testpaths = "tests"
addopts = [
    "-ra",
    "--cov=optexp",
    "--cov-report=html",
    "--strict-markers",
    "--strict-config",
    "--showlocals"
]
xfail_strict = true
filterwarnings = [
  'ignore: pkg_resources is deprecated as an API:DeprecationWarning',
  'ignore: Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning',
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]