[metadata]
name = optexp
version = 0.0.2
authors = Frederik Kunstner, Alan Milligan, Robin Yadav
author_email = frederik.kunstner@gmail.com
description =
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[flake8]
max-line-length = 88
ignore = E501