[metadata]
name = optexp
version = 0.0.2
authors = Frederik Kunstner, Alan Milligan, Robin Yadav
author_email = frederik.kunstner@gmail.com
description =
long_description = file: README.rst
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.10

[flake8]
max-line-length = 88
extend-ignore =
    # Indentation — black handles
    E1
    W1
    # Whitespace — black handles
    E2
    W2
    # Blank lines — black handles
    E3
    W3
    # Imports — isort handles
    E4
    W4
    # Line length — black handles
    E5
    W5